fix layout issue

--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -91,6 +91,8 @@
         }
     }
 
+    
+
     @media screen and (min-width: 600px) {
         &:nth-child(even){
             .project-thumb {
@@ -98,6 +100,17 @@
             }
             .project-details {
                 grid-column: 1 / 11;
+            }
+        }
+    }
+
+    @media screen and (min-width: 1000px) {
+        &:nth-child(even){
+            .project-thumb {
+                grid-column: 10 / 21;
+            }
+            .project-details {
+                grid-column: 1 / 10;
             }
         }
     }
@@ -145,14 +158,6 @@
             }
         }        
     }
-}
-
-.projects h2 {
-    font-weight: 900;
-    font-size: 2rem;
-    color: #263c50;
-    background-color: #e9f6fd;
-    padding: .5rem;
 }
 
 .projects-secondary {
